chore(image): move create endpoint behind authentication
