# docs/v1/swagger.yaml
@@ -108,23 +108,6 @@ paths:
       summary: Get event poster
       tags:
       - event
-  /image:
-    put:
-      consumes:
-      - application/x-www-form-urlencoded
-      description: Store the image and get the id back
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-        "500":
-          description: Internal Server Error
-      summary: Store an image
-      tags:
-      - image
   /image/{id}:
     get:
       description: Get an image given an id
