# internal/server/api/v1/image.go
@@ -1,7 +1,6 @@
 package v1
 
 import (
-	"github.com/ZeusWPI/events/internal/server/dto"
 	"github.com/ZeusWPI/events/internal/server/service"
 	"github.com/ZeusWPI/events/pkg/utils"
 	"github.com/gofiber/fiber/v2"
@@ -11,10 +10,6 @@ type Image struct {
 	router fiber.Router
 
 	image service.Image
-}
-
-type imageID struct {
-	ID int `json:"id"`
 }
 
 func NewImage(router fiber.Router, service *service.Service) *Image {
@@ -30,7 +25,6 @@ func NewImage(router fiber.Router, service *service.Service) *Image {
 
 func (r *Image) createRoutes() {
 	r.router.Get("/:imageId", r.get)
-	r.router.Put("/", r.create)
 }
 
 // get returns the image associated with an id
@@ -59,44 +53,4 @@ func (r *Image) get(c *fiber.Ctx) error {
 	c.Set("Content-Type", mimePNG)
 
 	return utils.SendCached(c, file)
-}
-
-// create creates a new image
-//
-//	@Summary		Store an image
-//	@Description	Store the image and get the id back
-//	@Tags			image
-//	@Accept			x-www-form-urlencoded
-//	@Produce		json
-//	@Success		200
-//	@Failure		400
-//	@Failure		500
-//	@Router			/image [put]
-func (r *Image) create(c *fiber.Ctx) error {
-	var image dto.ImageSave
-	if err := c.BodyParser(&image); err != nil {
-		return fiber.ErrBadRequest
-	}
-
-	form, err := c.MultipartForm()
-	if err != nil {
-		return fiber.ErrBadRequest
-	}
-	file, err := utils.GetFormFile(form, "file")
-	if err != nil {
-		return err
-	}
-
-	image.File = file
-
-	if err := dto.Validate.Struct(image); err != nil {
-		return fiber.NewError(fiber.StatusBadRequest, err.Error())
-	}
-
-	id, err := r.image.Save(c.Context(), image)
-	if err != nil {
-		return err
-	}
-
-	return c.JSON(imageID{ID: id})
 }
